test/conformance/chainsaw/mutate/clusterpolicy/cornercases/defaulting-namespace-labels/chainsaw-step-05-apply-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
spec:
  containers:
  - image: nginx:latest
    name: webserver
    ports:
    - containerPort: 80
