test/conformance/chainsaw/mutate/clusterpolicy/cornercases/defaulting-namespace-labels/policy-update.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: propagate-cost-labels-from-namespace
spec:
  failurePolicy: Fail
  rules:
  - context:
    - apiCall:
        jmesPath: metadata.labels
        urlPath: /api/v1/namespaces/{{request.namespace}}
      name: namespaceLabels
    match:
      any:
      - resources:
          kinds:
          - Pod
          - Deployment
          - StatefulSet
          - DaemonSet
          - Job
          - CronJob
    mutate:
      patchStrategicMerge:
        metadata:
          labels:
            cost.starfleet.evtech/application: '{{request.object.metadata.labels."cost.starfleet.evtech/application"
              || namespaceLabels."cost.starfleet.evtech/application" || ''empty''}}'
            cost.starfleet.evtech/project: '{{namespaceLabels."cost.starfleet.evtech/project"
              || ''empty''}}'
    name: add-cost-labels
