test/conformance/chainsaw/mutate/clusterpolicy/cornercases/defaulting-namespace-labels/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
spec:
  terminationGracePeriodSeconds: 10
  containers:
    - name: webserver
      image: nginx:latest
      ports:
        - containerPort: 80
