test/conformance/chainsaw/mutate/clusterpolicy/cornercases/defaulting-namespace-labels/chainsaw-step-01-assert-1-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: propagate-cost-labels-from-namespace
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
