test/conformance/chainsaw/mutate/clusterpolicy/cornercases/defaulting-namespace-labels/chainsaw-step-03-error-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
