test/conformance/chainsaw/mutate/clusterpolicy/cornercases/defaulting-namespace-labels/chainsaw-step-05-assert-1-1.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    cost.starfleet.evtech/application: empty
    cost.starfleet.evtech/project: empty
  name: webserver
