test/conformance/chainsaw/mutate/clusterpolicy/cornercases/defaulting-namespace-labels/99-cleanup.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: cleanup
spec:
  timeouts: {}
  try:
  - command:
      args:
      - delete
      - -f
      - 01-manifests.yaml,resource.yaml,05-pod.yaml
      - --force
      - --wait=true
      - --ignore-not-found=true
      entrypoint: kubectl
