test/conformance/chainsaw/mutate/clusterpolicy/cornercases/defaulting-namespace-labels/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: defaulting-namespace-labels
spec:
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: propagate-cost-labels-from-namespace
  - name: step-02
    try:
    - script:
        content: "if kubectl apply -f resource.yaml\nthen \n  echo \"Tested failed.
          Resource was allowed.\"\n  exit 1 \nelse \n  echo \"Test succeeded. Resource
          was blocked.\"\n  exit 0\nfi\n"
  - name: step-03
    try:
    - error:
        file: chainsaw-step-03-error-1-1.yaml
  - name: step-04
    try:
    - apply:
        file: policy-update.yaml
  - name: step-05  # cleanup context deadline exceeded
    try:
    - apply:
        file: chainsaw-step-05-apply-1-1.yaml
    - assert:
        file: chainsaw-step-05-assert-1-1.yaml
